Inicio testing de doctor repo