@@ -1,21 +1,22 @@
+package ar.edu.itba.pod.grpc.server.repositories;
 
 import ar.edu.itba.pod.grpc.server.exceptions.InvalidLevelException;
 import ar.edu.itba.pod.grpc.server.exceptions.PatientAlreadyExistsException;
 import ar.edu.itba.pod.grpc.server.exceptions.PatientDoesNotExistException;
-import ar.edu.itba.pod.grpc.server.repositories.PatientRepository;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class PatientRepositoryTest {
+
     private static PatientRepository patientRepository;
 
     @BeforeEach
     public void setUp() {
         patientRepository = new PatientRepository();
     }
+
     @Test
     void invalidLevelTest() {
         assertThrows(InvalidLevelException.class, () -> patientRepository.addPatient("Martin", 6));
@@ -24,32 +25,29 @@ public class PatientRepositoryTest {
     }
 
     @Test
-    void patientExistsTest()  {
-
+    void patientExistsTest() {
         assertDoesNotThrow(() -> patientRepository.addPatient("Martin", 5));
         assertThrows(PatientAlreadyExistsException.class, () -> patientRepository.addPatient("Martin", 5));
         assertTrue(patientRepository.patientExists("Martin"));
-
-
-
     }
+
     //TODO: no se porque falla con mismo nivel
     @Test
     void getPatientsTest() {
         assertDoesNotThrow(() -> patientRepository.addPatient("Martin", 5));
         assertDoesNotThrow(() -> patientRepository.addPatient("Marcos", 4));
         assertDoesNotThrow(() -> patientRepository.addPatient("Juan", 3));
-        //assertDoesNotThrow(() -> patientRepository.addPatient("Jose", 3));
+        assertDoesNotThrow(() -> patientRepository.addPatient("Jose", 3));
         assertDoesNotThrow(() -> patientRepository.addPatient("Julio", 1));
         assertTrue(patientRepository.patientExists("Martin"));
         assertTrue(patientRepository.patientExists("Marcos"));
         assertTrue(patientRepository.patientExists("Juan"));
-        //assertTrue(patientRepository.patientExists("Jose"));
+        assertTrue(patientRepository.patientExists("Jose"));
         assertTrue(patientRepository.patientExists("Julio"));
-
     }
+
     @Test
-    void checkPatientTest(){
+    void checkPatientTest() {
         assertDoesNotThrow(() -> patientRepository.addPatient("Lucas", 5));
         assertDoesNotThrow(() -> patientRepository.addPatient("Marcos", 4));
         assertDoesNotThrow(() -> patientRepository.addPatient("Juan", 3));
@@ -57,13 +55,15 @@ public class PatientRepositoryTest {
         assertEquals(2, patientRepository.checkPatient("Juan").getQueueLength());
         assertThrows(PatientDoesNotExistException.class, () -> patientRepository.checkPatient("Jose"));
     }
+
     @Test
-    void attendPatientTest(){
+    void attendPatientTest() {
         assertDoesNotThrow(() -> patientRepository.addPatient("Lucas", 5));
         assertDoesNotThrow(() -> patientRepository.addPatient("Marcos", 4));
         assertDoesNotThrow(() -> patientRepository.addPatient("Juan", 3));
         assertDoesNotThrow(() -> patientRepository.addPatient("Julio", 1));
-        patientRepository.attendPatient(patientRepository.getPatients().get(0));
+        patientRepository.attendPatient(patientRepository.getPatients().getFirst());
         assertFalse(patientRepository.patientExists("Lucas"));
     }
+
 }
